<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/textViewBmiGroup"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="320dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/bmi_group_text"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewSlash"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="20dp"
        android:layout_height="54dp"
        android:layout_marginTop="320dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/slash_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/weight_text"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/height_text"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textViewSlash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewBmiCount"
        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/bmi_count_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewSlash"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#0B4D7C"
        android:text="@string/button_calculate"
        android:textColor="#EEF3F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSlash" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonKcal" />

    <Button
        android:id="@+id/buttonDish"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonKcal"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonKcal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/button_calories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonCalculate"
        app:layout_constraintStart_toStartOf="@+id/buttonCalculate" />

    <TextView
        android:id="@+id/textError"
        android:layout_width="275dp"
        android:layout_height="30dp"
        android:textColor="#ff0000"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonCalculate"
        app:layout_constraintEnd_toEndOf="@+id/textViewBmiGroup"
        app:layout_constraintStart_toStartOf="@+id/textViewBmiCount"
        app:layout_constraintTop_toBottomOf="@+id/textViewSlash" />

</androidx.constraintlayout.widget.ConstraintLayout>